# logos-module-builder

./: README.md  flake.nix  index.html  result
cmake/: LogosCborModule.cmake  LogosModule.cmake
docs/: cmake-reference.md  configuration.md  external-libraries.md  getting-started.md  index.md  migration.md  nix-api.md  quick-reference.md  troubleshooting.md
doctests/: cdylib-qt-free-outbound.test.yaml  cross-language-composition-reverse.test.yaml  cross-language-composition.test.yaml  ui-typed-backend.test.yaml  wrap-external-lib-1-source.test.yaml  wrap-external-lib-2-prebuilt-binaries.test.yaml  wrap-external-lib-3-external-source.test.yaml  wrap-external-lib-4-nix-flake.test.yaml
lib/: appRuntimeLayout.nix  buildCppPlugin.nix  common.nix  default.nix  mkAppBundle.nix  mkExternalLib.nix  mkLogosCborModule.nix  mkLogosModule.nix  mkLogosModuleTests.nix  mkLogosQmlModule.nix  mkLogosRustModule.nix  mkModuleInclude.nix  mkModuleLib.nix  mkStandaloneApp.nix  modulePreConfigure.nix  parseMetadata.nix  parseModuleYaml.nix
master/: index.html
pr-112/: 404.html  index.html
pr-113/: index.html
pr-115/: index.html
pr-116/: index.html
pr-117/: index.html
pr-118/: index.html
pr-119/: index.html
pr-120/: index.html
pr-121/: index.html
pr-122/: index.html
pr-123/: index.html
templates/ui-module/: CMakeLists.txt  flake.nix  metadata.json  module.yaml
templates/ui-module/src/: ui_example_plugin.cpp  ui_example_plugin.h
tests/fixtures/rust-native-dep/rust-lib/: Cargo.toml  build.rs
tests/fixtures/rust-native-dep/rust-lib/src/: lib.rs
(+192 files in other folders)
